test/valid/AbstractClassExtendsConcreteClass/AbstractClass.plume
/**
 * Uma classe abstracta que extende uma class concreta
 * e override um metodo concreto
 *
 * @author 37059, Rita Henriques
 * @version $Id: AbstractClass.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
abstract class AbstractClass extends ConcreteClass is

  abstract method override profName : (name : String) -> String