test/invalid/fc34950_Override_Fields/B.plume
/**
 * B.plume
 *
 * Test: This class represent a Abstract class B 
 * B -> A
 * @author namartins
 * @version $Id: B.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 abstract class B extends A is	
 	field  d : Integer
 	abstract method  getSAS: () -> Integer 
 	